fix scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ html,
 body,
 #root {
   min-height: 100vh;
-  width: 100%;
+  min-width: 100vw;
   display: flex;
   justify-items: center;
   align-items: center;
